Fix/story 2/various fixes (#152)
* fix: Inline results per page string in pagination

* feat: add sorting to query description.

hardcoded to page views for now

* fix: set "Clear Filters" font size

* fix: disappearing publishing status checkboxes when "not withdrawn"

* fix: no "occurrences" header column when filters on

* fix: overflow / resize / overlap of autocomplete inputs

* fix: missing logging in backend

* fix: language search not working: disable occurrences if searchtype = language

* Fix: empty occurrences column

* fix: remove duplicate taxons

* fix: remove outdated pagination description

* chore: remove console.log

* fix: autocomplete spacings for link search

* pr comments: remove commented and redundant code

* fix ui: introduce negative margin on keyword comninator under keywords search panel

--- a/src/frontend/scss/main.scss
+++ b/src/frontend/scss/main.scss
@@ -125,16 +125,17 @@ pre {
 
   .organisation-search,
   .taxon-search,
-  .language-search {
+  .language-search,
+  .links-search {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 100px 100px 100px;
   }
 
   .search-filters-left-col {
     display: grid;
 
     &.keyword-search {
-      grid-template-rows: 16.66% 33.32% 16.66% 16.66% 16.66%;
+      grid-template-rows: 100px 200px 100px 100px 100px;
     }
   }
 
@@ -142,8 +143,12 @@ pre {
     display: grid;
 
     &.keyword-search {
-      grid-template-rows: 16.66% 16.66% 16.66% 16.66% 16.66%;
+      grid-template-rows: 100px 100px 100px 100px 100px;
     }
+  }
+
+  .autocomplete__menu {
+    z-index: 99;
   }
 }
 
@@ -392,6 +397,19 @@ h2:focus-visible {
         max-width: 175px;
         margin-bottom: 20px;
       }
+
+      .side-filter-fieldset {
+        margin-top: -30px;
+        margin-bottom: 30px;
+      }
+
+      .govuk-form-group {
+        height: 70px;
+
+        .autocomplete__menu {
+          z-index: 99;
+        }
+      }
     }
   }
 
@@ -404,4 +422,20 @@ h2:focus-visible {
       display: none;
     }
   }
+}
+
+.pagination-select {
+  select,
+  label {
+    display: inline-block;
+  }
+
+  select {
+    min-width: auto;
+    margin: 0 10px;
+  }
+}
+
+#clear-side-filters-link {
+  font-size: 19px;
 }
